# MaiMBot

./: ![新版麦麦开始学习.bat  .dockerignore  .env  .env.prod  .gitattributes  .gitignore  1key_install_linux.sh  CLAUDE.md  CONTRIBUTE.md  Dockerfile  EULA.md  MaiLauncher.bat  PRIVACY.md  README.md  _thingking.bat  bot.py  bot_config.toml  changelog.md  changelog_config.md  docker-compose.yml  emoji_reviewer.py  entrypoint.sh  env.example  flake.nix  hort --pretty=format-ad -s  import_openie.py  info_extraction.py  interest_monitor_gui.py  llm_statistics.txt  llm_tool_benchmark_results.json  pyproject.toml  raw_data_preprocessor.py  requirements.txt  ruff.toml  run-WebUI.bat  run.bat  run.py  run.sh  run_debian12.sh  run_maimai.bat  (+16 more)
.github/: pull_request_template.md
MaiMBot-main/: README.md  bot.py  kill_mongodb.bat  knowledge.bat  pyproject.toml  run_db.bat
changelogs/: changelog.md  changelog_config.md  changelog_dev.md
config/: auto_update.py  bot_config.toml  bot_config_template.toml  bot_config_test.toml  bot_config_toml  env.example
config_helper/: config_helper.py  config_notice.md
depends-data/: char_frequency.json
docs/: Jonathan R.md  doc1.md  docker_deploy.md  fast_q_a.md  installation.md  installation_cute.md  installation_standard.md  linux_deploy_guide_for_beginners.md  manual_deploy.md  manual_deploy_linux.md  manual_deploy_macos.md  manual_deploy_windows.md  synology_deploy.md
flagged/: log.csv
results/: personality_result.json
script/: run_thingking.bat
scripts/: count.py  import_openie.py  info_extraction.py  interest_monitor_gui.py  run.sh  (+5 more)
(+294 files in other folders)
