[project]
name = "Megbot"
version = "0.1.0"
description = "New Bot Project"

[tool.nonebot]
plugins = ["src.plugins.chat"]
plugin_dirs = ["src/plugins"] 

[tool.ruff]
# 设置 Python 版本
target-version = "py39"

# 启用的规则
select = [
    "E",  # pycodestyle 错误
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

# 行长度设置
line-length = 88